# linux-apps

cmake-test/: CMakeLists.txt
cmake-test/inc/test1/: a.h  b.h
cmake-test/inc/test1/test3/: f.h
cmake-test/inc/test2/: c.h
cmake-test/lib/so/: libflexdebug.so.1  libflexdebug.so.1.4
cmake-test/lib/src/debug/: CMakeLists.txt
cmake-test/projects/: cmake-test.IAB  cmake-test.IAD  cmake-test.IMB  cmake-test.IMD  cmake-test.PFI  cmake-test.PO  cmake-test.PR  cmake-test.PRI  cmake-test.PS
cmake-test/src/: main.cpp
cmake-test/src/test1/: a.cpp  b.cpp
cmake-test/src/test1/test3/: f.cpp
cmake-test/src/test2/: c.cpp
getevent/: Makefile  getevent.c  getevent.h
lib-test/inc/: demo.h
lib-test/lib/: Makefile  demo.c
lib-test/src/: Makefile  main.c
v4l2/camera/: Makefile
v4l2/photo/: Makefile  photo.c
